--- a/app/src/main/res/layout/store_data_item.xml
+++ b/app/src/main/res/layout/store_data_item.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/item_design"
         android:orientation="horizontal">
 
-        <RadioButton
+        <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_5sdp" />
