--- a/app/src/main/res/layout/data_add.xml
+++ b/app/src/main/res/layout/data_add.xml
@@ -14,6 +14,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Darshan"
+        android:textSize="@dimen/_40sdp"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="android"
         android:textSize="@dimen/_40sdp"
         android:gravity="center"/>
