--- a/app/src/main/res/layout/item_material.xml
+++ b/app/src/main/res/layout/item_material.xml
@@ -16,5 +16,11 @@
         android:text="android devloper"
         android:textSize="@dimen/_40sdp"
         android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="devloper"
+        android:textSize="@dimen/_40sdp"
+        android:gravity="center"/>
 
 </LinearLayout>
