--- a/app/src/main/res/layout/item_material.xml
+++ b/app/src/main/res/layout/item_material.xml
@@ -22,5 +22,12 @@
         android:text="devloper"
         android:textSize="@dimen/_40sdp"
         android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="android"
+        android:textSize="@dimen/_40sdp"
+        android:gravity="center"/>
+
 
 </LinearLayout>
