--- a/app/src/main/res/layout/item_material.xml
+++ b/app/src/main/res/layout/item_material.xml
@@ -7,7 +7,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android"
+        android:text="android app"
+        android:textSize="@dimen/_40sdp"
+        android:gravity="center"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="android app"
         android:textSize="@dimen/_40sdp"
         android:gravity="center"/>
 
