--- a/app/src/main/res/layout/item_material.xml
+++ b/app/src/main/res/layout/item_material.xml
@@ -7,6 +7,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data Science"/>
+        android:text="Data Science"
+        android:textSize="@dimen/_44sdp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data Science"
+        android:textSize="@dimen/_44sdp"/>
 
 </LinearLayout>
