--- a/app/src/main/res/layout/new_task_add.xml
+++ b/app/src/main/res/layout/new_task_add.xml
@@ -67,6 +67,11 @@
             android:text="Due Date"
             android:textStyle="bold" />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -74,7 +79,14 @@
             android:layout_marginRight="@dimen/_16sdp"
             android:hint="Set Date" />
 
-
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/baseline_calendar_month_24"/>
+        </RelativeLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
