--- a/app/src/main/res/drawable/logo_bgr.xml
+++ b/app/src/main/res/drawable/logo_bgr.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="@color/blue"/>
-    <corners android:radius="@dimen/_150sdp"/>
-
+    <solid android:color="#2895FE"/>
+    <stroke android:width="0.5dp"/>
 </shape>
