--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
                     android:layout_marginLeft="@dimen/_6sdp"
                     android:layout_marginTop="@dimen/_15sdp"
                     android:layout_weight="1"
+
                     android:background="@null"
                     android:hint="Search Task" />
 
@@ -53,17 +54,18 @@
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_16sdp"/>
+            android:layout_margin="@dimen/_16sdp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="@dimen/_16sdp"/>
+            android:layout_margin="@dimen/_16sdp" />
 
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/addbtn"
         android:layout_width="@dimen/_44sdp"
         android:layout_height="@dimen/_44sdp"
         android:layout_alignParentRight="true"
