--- a/app/src/main/res/layout/activity_new_task_add.xml
+++ b/app/src/main/res/layout/activity_new_task_add.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".new_task_add">
+
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -14,8 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <ImageView
+                android:id="@+id/BackArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_16sdp"
@@ -29,9 +32,9 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:background="@null"
+                android:fontFamily="@font/roboto_slab_bold"
                 android:text="New Task"
-                android:textStyle="bold"
-                android:textSize="@dimen/_14sdp"/>
+                android:textSize="@dimen/_14sdp" />
 
         </LinearLayout>
 
@@ -40,17 +43,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_margin="@dimen/_16sdp"
         android:background="@drawable/sort_border"
-        android:layout_margin="@dimen/_16sdp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            android:text="What is to be done?"
-            android:textStyle="bold" />
+            android:fontFamily="@font/robotoslab_extrabold"
+            android:text="What is to be done?" />
 
         <EditText
             android:layout_width="match_parent"
@@ -64,57 +67,67 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            android:text="Due Date"
-            android:textStyle="bold" />
+            android:fontFamily="@font/robotoslab_extrabold"
+            android:text="Due Date" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_16sdp"
-            android:layout_marginRight="@dimen/_16sdp"
-            android:hint="Set Date" />
+            <EditText
+                android:id="@+id/edt_setDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusableInTouchMode="false"
+                android:layout_marginLeft="@dimen/_16sdp"
+                android:layout_marginRight="@dimen/_16sdp"
+                android:hint="Set Date" />
 
             <ImageView
+                android:id="@+id/Date_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/_20sdp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/baseline_calendar_month_24"/>
+                android:layout_marginRight="@dimen/_20sdp"
+                android:src="@drawable/baseline_calendar_month_24" />
         </RelativeLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            android:text="Add Category"
-            android:textStyle="bold" />
+            android:fontFamily="@font/robotoslab_extrabold"
+            android:text="Add Category" />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
-            android:hint="Select Category"
-            android:layout_marginBottom="@dimen/_16sdp"/>
+            android:layout_marginBottom="@dimen/_16sdp"
+            android:hint="Select Category" />
 
 
     </LinearLayout>
 
     <TextView
-        android:layout_width="@dimen/_84sdp"
+        android:layout_width="wrap_content"
         android:layout_height="44dp"
-        android:text="Submit"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="@dimen/_14sdp"
         android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/button_design"
-        android:gravity="center"/>
+        android:fontFamily="@font/roboto_slab_bold"
+        android:gravity="center"
+        android:text="Submit"
+        android:ems="6"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_14sdp" />
+
+
 
 </LinearLayout>
