--- a/app/src/main/res/layout/store_data_item.xml
+++ b/app/src/main/res/layout/store_data_item.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
@@ -48,6 +47,13 @@
             android:layout_gravity="center"
             android:layout_marginRight="@dimen/_16sdp"/>
 
+        <ImageView
+            android:layout_width="@dimen/_24sdp"
+            android:layout_height="@dimen/_24sdp"
+            android:layout_marginLeft="@dimen/_5sdp"
+            android:src="@drawable/baseline_more_vert_24"
+            android:layout_gravity="center"
+            android:layout_marginRight="@dimen/_16sdp"/>
 
     </LinearLayout>
 
