--- a/app/src/main/res/layout/activity_new_task_add.xml
+++ b/app/src/main/res/layout/activity_new_task_add.xml
@@ -56,6 +56,7 @@
             android:text="What is to be done?" />
 
         <EditText
+            android:id="@+id/addtask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
@@ -76,7 +77,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/edt_setDate"
+                android:id="@+id/edtsetDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="false"
@@ -87,13 +88,39 @@
                 android:hint="Set Date" />
 
             <ImageView
-                android:id="@+id/Date_picker"
+                android:id="@+id/Datepicker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
                 android:src="@drawable/baseline_calendar_month_24" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edtsetTime"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:cursorVisible="false"
+                android:focusableInTouchMode="false"
+                android:layout_marginLeft="@dimen/_16sdp"
+                android:layout_marginRight="@dimen/_16sdp"
+                android:hint="Set Date" />
+
+            <ImageView
+                android:id="@+id/Timepicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:src="@drawable/baseline_access_time_24" />
         </RelativeLayout>
 
         <TextView
@@ -116,6 +143,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_gravity="center"
