--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/taskList"
+        android:title="TaskList" />
+    <item
+        android:id="@+id/Feedback"
+        android:title="Feedback" />
+    <item
+        android:id="@+id/Help"
+        android:title="Help" />
+    <item
+        android:id="@+id/Setting"
+        android:title="Setting" />
+
 </menu>
