--- a/app/src/main/res/layout/store_data_item.xml
+++ b/app/src/main/res/layout/store_data_item.xml
@@ -1,72 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="@dimen/_60sdp"
-        android:layout_margin="@dimen/_16sdp"
-        android:background="@drawable/item_design"
-        android:orientation="horizontal">
-
-        <CheckBox
-            android:id="@+id/checkBox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_5sdp" />
+        android:layout_marginTop="@dimen/_10sdp"
+        app:cardCornerRadius="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:layout_weight="9">
+            android:layout_height="@dimen/_60sdp"
+            android:orientation="horizontal"
+            android:background="#E9F0F8">
 
-            <TextView
-                android:id="@+id/setData"
+            <RadioButton
+                android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Data Submit"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14sdp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="@dimen/_10sdp" />
 
-            <TextView
-                android:id="@+id/setDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10-01-2012"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp"/>
-            <TextView
-                android:id="@+id/setTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10:25:AM"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_weight="9"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/setData"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Data Submit"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_14sdp" />
+
+                <TextView
+                    android:id="@+id/setDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10-01-2012"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10sdp" />
+
+                <TextView
+                    android:id="@+id/setTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10:25:AM"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10sdp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/rateStar"
+                android:layout_width="@dimen/_24sdp"
+                android:layout_height="@dimen/_24sdp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_5sdp"
+                android:layout_marginRight="@dimen/_16sdp"
+                android:src="@drawable/baseline_star_border_24" />
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/rateStar"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_24sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:src="@drawable/baseline_star_border_24"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/_16sdp"/>
-
-        <ImageView
-            android:id="@+id/dataOption"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_24sdp"
-            android:layout_marginLeft="@dimen/_5sdp"
-            android:src="@drawable/baseline_more_vert_24"
-            android:layout_gravity="center"
-            android:layout_marginRight="@dimen/_16sdp"/>
-
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
