--- a/app/src/main/res/menu/menu1.xml
+++ b/app/src/main/res/menu/menu1.xml
@@ -2,16 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/taskList"
-        android:title="TaskList" />
+        android:id="@+id/edit"
+        android:title="Edit" />
     <item
-        android:id="@+id/Feedback"
-        android:title="Feedback" />
-    <item
-        android:id="@+id/Help"
-        android:title="Help" />
-    <item
-        android:id="@+id/Setting"
-        android:title="Setting" />
+        android:id="@+id/delete"
+        android:title="Delete" />
 
 </menu>
