--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,12 +21,13 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#45A3DD">
+                style="@style/statusColorStyle">
 
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_16sdp"
+                    style="@style/iconColorStyle"
                     android:layout_marginTop="@dimen/_16sdp"
                     android:src="@drawable/baseline_search_24" />
 
@@ -37,6 +38,7 @@
                     android:layout_marginTop="@dimen/_15sdp"
                     android:layout_weight="1"
                     android:background="@null"
+                    style="@style/TextColorStyle"
                     android:hint="Search Task" />
 
             </LinearLayout>
@@ -58,6 +60,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="@dimen/_16sdp"
+        style="@style/statusColorStyle"
         android:layout_marginTop="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_16sdp"
         android:layout_marginBottom="@dimen/_16sdp"
@@ -67,6 +70,7 @@
         <ImageView
             android:layout_width="@dimen/_24sdp"
             android:layout_height="@dimen/_24sdp"
+            style="@style/iconColorStyle"
             android:src="@drawable/baseline_add_24" />
 
     </LinearLayout>
