--- a/app/src/main/res/layout/activity_new_task_add.xml
+++ b/app/src/main/res/layout/activity_new_task_add.xml
@@ -16,9 +16,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#45A3DD">
+            style="@style/statusColorStyle">
 
             <ImageView
+                style="@style/iconColorStyle"
                 android:id="@+id/BackArrow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,6 +34,7 @@
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:background="@null"
+                style="@style/TextColorStyle"
                 android:text="New Task"
                 android:textSize="@dimen/_14sdp"
                 android:textColor="@color/white"
@@ -52,6 +54,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/TextColorStyle"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="What is to be done?"
@@ -60,6 +63,7 @@
         <EditText
             android:id="@+id/addtask"
             android:layout_width="match_parent"
+            style="@style/TextColorStyle"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
@@ -68,6 +72,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/TextColorStyle"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="Due Date"
@@ -84,6 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_16sdp"
                 android:layout_marginRight="@dimen/_16sdp"
+                style="@style/TextColorStyle"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusableInTouchMode="false"
@@ -96,6 +102,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
+                style="@style/iconColorStyle"
                 android:src="@drawable/baseline_calendar_month_24" />
         </RelativeLayout>
 
@@ -108,6 +115,7 @@
                 android:id="@+id/edtsetTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/TextColorStyle"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusableInTouchMode="false"
@@ -122,6 +130,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
+                style="@style/iconColorStyle"
                 android:src="@drawable/baseline_access_time_24" />
         </RelativeLayout>
 
@@ -130,6 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
+            style="@style/TextColorStyle"
             android:text="Add Category"
             android:textSize="@dimen/_16sdp"/>
 
@@ -138,6 +148,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
+            style="@style/TextColorStyle"
             android:layout_marginBottom="@dimen/_16sdp"
             android:hint="Select Category" />
 
@@ -150,6 +161,7 @@
         android:layout_height="44dp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_10sdp"
+        style="@style/TextColorStyle"
         android:background="@drawable/button_design"
         android:gravity="center"
         android:text="Submit"
