--- a/app/src/main/res/layout/update_data.xml
+++ b/app/src/main/res/layout/update_data.xml
@@ -14,6 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/TextColorStyle"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="What is to be done?"
@@ -24,6 +25,7 @@
             android:id="@+id/addtask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/TextColorStyle"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
             android:hint="Enter Task Here"
@@ -33,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
+            style="@style/TextColorStyle"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="Due Date"
             android:textSize="@dimen/_16sdp"
@@ -47,6 +50,7 @@
                 android:id="@+id/edtsetDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                style="@style/TextColorStyle"
                 android:layout_marginLeft="@dimen/_16sdp"
                 android:layout_marginRight="@dimen/_16sdp"
                 android:clickable="false"
@@ -61,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                style="@style/iconColorStyle"
                 android:layout_marginRight="@dimen/_20sdp"
                 android:src="@drawable/baseline_calendar_month_24" />
         </RelativeLayout>
@@ -76,6 +81,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="false"
                 android:cursorVisible="false"
+                style="@style/TextColorStyle"
                 android:focusableInTouchMode="false"
                 android:layout_marginLeft="@dimen/_16sdp"
                 android:layout_marginRight="@dimen/_16sdp"
@@ -89,6 +95,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
+                style="@style/iconColorStyle"
                 android:src="@drawable/baseline_access_time_24" />
         </RelativeLayout>
 
@@ -97,6 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
+            style="@style/TextColorStyle"
             android:text="Add Category"
             android:textSize="@dimen/_16sdp"
             android:ems="20"/>
@@ -106,6 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
+            style="@style/TextColorStyle"
             android:layout_marginBottom="@dimen/_16sdp"
             android:hint="Select Category"
             android:ems="20"/>
@@ -121,6 +130,7 @@
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/button_design"
         android:gravity="center"
+        style="@style/TextColorStyle"
         android:text="Submit"
         android:ems="15"
         android:textColor="@color/white"
