--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,4 +9,16 @@
     </style>
 
     <style name="Theme.ToDoList" parent="Base.Theme.ToDoList" />
+
+    <style name="TextColorStyle">
+        <item name="android:textColor">#000000</item>
+    </style>
+
+    <style name="iconColorStyle">
+        <item name="android:tint">#000000</item>
+    </style>
+
+    <style name="statusColorStyle">
+        <item name="android:statusBarColor">#03629E</item>
+    </style>
 </resources>
