--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    style="@style/All_ActivityStyle"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -21,7 +21,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                style="@style/statusColorStyle">
+                style="@style/Main_ActivityStyle">
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -60,11 +60,10 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="@dimen/_16sdp"
-        style="@style/statusColorStyle"
         android:layout_marginTop="@dimen/_16sdp"
         android:layout_marginEnd="@dimen/_16sdp"
         android:layout_marginBottom="@dimen/_16sdp"
-        android:background="@drawable/button_design"
+        style="@style/Add_Style"
         android:gravity="center">
 
         <ImageView
