--- a/app/src/main/res/layout/activity_new_task_add.xml
+++ b/app/src/main/res/layout/activity_new_task_add.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/All_ActivityStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".new_task_add"
-    android:background="@color/white">
+    tools:context=".new_task_add">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -14,13 +14,13 @@
         app:cardMaxElevation="@dimen/_12sdp">
 
         <LinearLayout
+            style="@style/Main_ActivityStyle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/statusColorStyle">
+            android:layout_height="match_parent">
 
             <ImageView
-                style="@style/iconColorStyle"
                 android:id="@+id/BackArrow"
+                style="@style/iconColorStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_16sdp"
@@ -28,55 +28,55 @@
                 android:src="@drawable/baseline_arrow_back_24" />
 
             <TextView
+                style="@style/TextColorStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_16sdp"
                 android:layout_weight="1"
                 android:background="@null"
-                style="@style/TextColorStyle"
                 android:text="New Task"
-                android:textSize="@dimen/_14sdp"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textSize="@dimen/_14sdp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
+        style="@style/BorderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_16sdp"
-        android:background="@drawable/sort_border"
         android:orientation="vertical">
 
         <TextView
+            style="@style/TextColorStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextColorStyle"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="What is to be done?"
-            android:textSize="@dimen/_16sdp"/>
+            android:textSize="@dimen/_16sdp" />
 
         <EditText
             android:id="@+id/addtask"
-            android:layout_width="match_parent"
             style="@style/TextColorStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
             android:hint="Enter Task Here" />
 
         <TextView
+            style="@style/TextColorStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextColorStyle"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
             android:text="Due Date"
-            android:textSize="@dimen/_16sdp"/>
+            android:textSize="@dimen/_16sdp" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -85,11 +85,11 @@
 
             <EditText
                 android:id="@+id/edtsetDate"
+                style="@style/TextColorStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_16sdp"
                 android:layout_marginRight="@dimen/_16sdp"
-                style="@style/TextColorStyle"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusableInTouchMode="false"
@@ -97,12 +97,12 @@
 
             <ImageView
                 android:id="@+id/Datepicker"
+                style="@style/iconColorStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
-                style="@style/iconColorStyle"
                 android:src="@drawable/baseline_calendar_month_24" />
         </RelativeLayout>
 
@@ -113,42 +113,42 @@
 
             <EditText
                 android:id="@+id/edtsetTime"
+                style="@style/TextColorStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/TextColorStyle"
+                android:layout_marginLeft="@dimen/_16sdp"
+                android:layout_marginRight="@dimen/_16sdp"
                 android:clickable="false"
                 android:cursorVisible="false"
                 android:focusableInTouchMode="false"
-                android:layout_marginLeft="@dimen/_16sdp"
-                android:layout_marginRight="@dimen/_16sdp"
                 android:hint="Set Date" />
 
             <ImageView
                 android:id="@+id/Timepicker"
+                style="@style/iconColorStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/_20sdp"
-                style="@style/iconColorStyle"
                 android:src="@drawable/baseline_access_time_24" />
         </RelativeLayout>
 
         <TextView
+            style="@style/TextColorStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_16sdp"
-            style="@style/TextColorStyle"
             android:text="Add Category"
-            android:textSize="@dimen/_16sdp"/>
+            android:textSize="@dimen/_16sdp" />
 
         <EditText
+            style="@style/TextColorStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_16sdp"
             android:layout_marginRight="@dimen/_16sdp"
-            style="@style/TextColorStyle"
             android:layout_marginBottom="@dimen/_16sdp"
             android:hint="Select Category" />
 
@@ -157,15 +157,14 @@
 
     <TextView
         android:id="@+id/btnSubmit"
+        style="@style/Add_Style"
         android:layout_width="wrap_content"
         android:layout_height="44dp"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_10sdp"
-        style="@style/TextColorStyle"
-        android:background="@drawable/button_design"
+        android:ems="6"
         android:gravity="center"
         android:text="Submit"
-        android:ems="6"
         android:textColor="@color/white"
         android:textSize="@dimen/_14sdp" />
 
