--- a/app/src/main/res/layout/store_data_item.xml
+++ b/app/src/main/res/layout/store_data_item.xml
@@ -6,35 +6,42 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_60sdp"
+        android:layout_height="@dimen/_65sdp"
         android:layout_marginTop="@dimen/_10sdp"
+        app:cardElevation="@dimen/_2sdp"
+        app:cardUseCompatPadding="true"
         app:cardCornerRadius="@dimen/_5sdp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/_60sdp"
             android:orientation="horizontal"
-            android:background="#E9F0F8">
+            android:layout_gravity="center"
+            android:background="#45A3DD">
 
-            <RadioButton
+            <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:theme="@style/MyCheckBox"
+                android:gravity="center"
                 android:layout_marginLeft="@dimen/_10sdp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_height="wrap_content"
                 android:layout_weight="9"
+                android:layout_gravity="center"
+                android:paddingLeft="@dimen/_16sdp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/setData"
+                    android:id="@+id/setTask"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Data Submit"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_14sdp" />
 
                 <TextView
@@ -42,7 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10-01-2012"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_10sdp" />
 
                 <TextView
@@ -50,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10:25:AM"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_10sdp" />
 
             </LinearLayout>
