--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,9 +4,14 @@
         <!-- Customize your light theme here. -->
 
         <item name="android:statusBarColor">@color/blue</item>
+        <item name="android:checkboxStyle">@color/white</item>
 
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.ToDoList" parent="Base.Theme.ToDoList" />
+
+    <style name="MyCheckBox" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorControlNormal">#fff</item>
+    </style>
 </resources>
