--- a/app/src/main/res/layout/activity_new_task_add.xml
+++ b/app/src/main/res/layout/activity_new_task_add.xml
@@ -97,7 +97,7 @@
 
             <ImageView
                 android:id="@+id/Datepicker"
-                style="@style/iconColorStyle"
+                style="@style/iconColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
@@ -125,7 +125,7 @@
 
             <ImageView
                 android:id="@+id/Timepicker"
-                style="@style/iconColorStyle"
+                style="@style/iconColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
