--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,16 +34,19 @@
         android:layout_height="wrap_content">
 
         <EditText
+            style="@style/BorderStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Password"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:gravity="center|left"
             android:padding="@dimen/_10sdp"
-            android:layout_margin="@dimen/_10sdp"
-            style="@style/BorderStyle"
             android:paddingLeft="@dimen/_16sdp"
-            android:textSize="@dimen/_16sdp"
-            android:textColor="#7E7D7D"/>
+            android:text="Password"
+            android:textColor="#7E7D7D"
+            android:textSize="@dimen/_16sdp" />
 
         <ImageView
             android:layout_width="@dimen/_24sdp"
