--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,9 +19,14 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="TextColor2Style">
+        <item name="android:textColor">#636363</item>
+    </style>
+
     <style name="iconColorStyle">
         <item name="android:tint">#fff</item>
     </style>
+
     <style name="iconColor">
         <item name="android:tint">#000</item>
     </style>
@@ -41,8 +46,13 @@
     <style name="All_ActivityStyle">
         <item name="android:background">#FFFFFF</item>
     </style>
+
     <style name="Add_Style">
         <item name="android:background">@drawable/button_design</item>
+    </style>
+
+    <style name="Email_Style">
+        <item name="android:background">#494545</item>
     </style>
 
 </resources>
