--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,7 @@
 
     <style name="BorderStyle">
         <item name="android:background">@drawable/sort_border</item>
+        <item name="android:textColor">#636363</item>
     </style>
 
     <style name="Store_DataStyle">
