--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,10 +23,13 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:gravity="center|left"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:padding="@dimen/_10sdp"
         android:paddingLeft="@dimen/_16sdp"
         android:hint="Email"
-        android:textColor="#7E7D7D"
         android:textSize="@dimen/_16sdp" />
 
     <RelativeLayout
