--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,15 +21,15 @@
         style="@style/BorderStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:gravity="center|left"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
+        android:gravity="center|left"
+        android:hint="Email"
+        android:inputType="text"
         android:padding="@dimen/_10sdp"
         android:paddingLeft="@dimen/_16sdp"
-        android:hint="Email"
         android:textSize="@dimen/_16sdp" />
 
     <RelativeLayout
@@ -45,10 +45,10 @@
             android:layout_marginEnd="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:gravity="center|left"
+            android:hint="Password"
             android:inputType="textVisiblePassword"
             android:padding="@dimen/_10sdp"
             android:paddingLeft="@dimen/_16sdp"
-            android:hint="Password"
             android:textColor="#7E7D7D"
             android:textSize="@dimen/_16sdp" />
 
@@ -113,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_90sdp"
         android:padding="@dimen/_10sdp">
+
         <TextView
             style="@style/login"
             android:layout_width="match_parent"
@@ -122,7 +123,7 @@
             android:padding="@dimen/_10sdp"
             android:paddingLeft="@dimen/_16sdp"
             android:text="Login with Facebook"
-            android:textColor="#fff"
+
             android:textSize="@dimen/_14sdp" />
 
         <ImageView
@@ -134,28 +135,28 @@
 
 
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/_10sdp">
 
         <TextView
-           style="@style/loginBorder"
+            style="@style/BorderStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="@dimen/_10sdp"
             android:paddingLeft="@dimen/_16sdp"
-            android:text="Login with Facebook"
-            android:textColor="#000"
+            android:text="Login with Google"
             android:textSize="@dimen/_14sdp" />
 
         <ImageView
             android:layout_width="@dimen/_24sdp"
             android:layout_height="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginLeft="@dimen/_16sdp"
-             android:src="@drawable/google" />
+            android:layout_marginTop="@dimen/_8sdp"
+            android:src="@drawable/google" />
 
 
     </RelativeLayout>
